[gd_scene load_steps=22 format=3 uid="uid://b57787sd0uw3v"]

[ext_resource type="Script" uid="uid://be1jo7qkdrnv" path="res://src/map/branching_mrt_map.gd" id="1_0m4hf"]
[ext_resource type="Texture2D" uid="uid://c7buqhpvx6qug" path="res://assets/map/NEW_MAP.png" id="2_74pbq"]
[ext_resource type="Script" uid="uid://lboq80aklq2m" path="res://src/map/map_ui.gd" id="3_6pw1s"]
[ext_resource type="Texture2D" uid="uid://bkfu3rwnh3mra" path="res://assets/map/SINGLE_MAP_FRAME.png" id="4_6pw1s"]
[ext_resource type="Texture2D" uid="uid://m1j8joewaqw" path="res://assets/map/GREEN_NODE_FLASHING.png" id="5_61dor"]
[ext_resource type="Script" uid="uid://ctpbdaxr28mno" path="res://src/map/node_logic.gd" id="6_61dor"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6pw1s"]
atlas = ExtResource("2_74pbq")

[sub_resource type="AtlasTexture" id="AtlasTexture_61dor"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_5or0s"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_y8l36"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_ldpqy"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_6eris"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_vejkc"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_ehfkc"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_oiw72"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_wo0un"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_muv01"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_4lqr8"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_53tpu"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_x2scm"]
atlas = ExtResource("5_61dor")

[sub_resource type="AtlasTexture" id="AtlasTexture_74whj"]
atlas = ExtResource("5_61dor")

[node name="BranchingMrtMap" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0m4hf")

[node name="MapUI" type="TextureRect" parent="."]
custom_minimum_size = Vector2(740.57, 648)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -192.0
offset_right = 192.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_6pw1s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("3_6pw1s")

[node name="MapFrame(debug)" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(740.57, 648)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -56.0
offset_right = 64.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6pw1s")
expand_mode = 1
stretch_mode = 5

[node name="Nodes" type="Control" parent="."]
custom_minimum_size = Vector2(740.57, 648)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.285
offset_top = -324.0
offset_right = 370.285
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="Node(1,1)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 70.285
offset_top = 347.0
offset_right = 150.285
offset_bottom = 427.0
scale = Vector2(0.58, 0.58)
texture_normal = SubResource("AtlasTexture_61dor")
stretch_mode = 5
script = ExtResource("6_61dor")

[node name="Node(2,1)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 170.285
offset_top = 262.0
offset_right = 250.285
offset_bottom = 342.0
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_5or0s")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(2,2)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 170.28499
offset_top = 447.99997
offset_right = 250.28499
offset_bottom = 528.0
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_y8l36")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(3,1)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 263.285
offset_top = 168.0
offset_right = 343.285
offset_bottom = 248.0
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_ldpqy")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(3,2)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 263.285
offset_top = 356.0
offset_right = 343.285
offset_bottom = 436.0
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_6eris")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(3,3)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 261.28497
offset_top = 538.99994
offset_right = 341.28497
offset_bottom = 618.99994
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_vejkc")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(4,1)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 355.28497
offset_top = 261.99997
offset_right = 435.28497
offset_bottom = 341.99997
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_ehfkc")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(4,2)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 355.28497
offset_top = 447.0
offset_right = 435.28497
offset_bottom = 527.0
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_oiw72")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(5,1)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 447.28497
offset_top = 169.99998
offset_right = 527.285
offset_bottom = 249.99998
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_wo0un")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(5,2)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 447.28503
offset_top = 355.0
offset_right = 527.28503
offset_bottom = 435.0
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_muv01")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(5,3)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 445.28497
offset_top = 540.99994
offset_right = 525.285
offset_bottom = 620.99994
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_4lqr8")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(6,1)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 542.285
offset_top = 261.99997
offset_right = 622.285
offset_bottom = 341.99997
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_53tpu")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(6,2)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 541.285
offset_top = 447.99997
offset_right = 621.285
offset_bottom = 528.0
scale = Vector2(0.4, 0.4)
texture_normal = SubResource("AtlasTexture_x2scm")
stretch_mode = 4
script = ExtResource("6_61dor")

[node name="Node(7,1)" type="TextureButton" parent="Nodes"]
layout_mode = 0
offset_left = 624.28503
offset_top = 347.0
offset_right = 704.28503
offset_bottom = 427.0
scale = Vector2(0.58, 0.58)
texture_normal = SubResource("AtlasTexture_74whj")
stretch_mode = 4
script = ExtResource("6_61dor")

[connection signal="pressed" from="Nodes/Node(1,1)" to="." method="_on_node_11_pressed"]
[connection signal="pressed" from="Nodes/Node(2,1)" to="." method="_on_node_21_pressed"]
[connection signal="pressed" from="Nodes/Node(2,2)" to="." method="_on_node_22_pressed"]
[connection signal="pressed" from="Nodes/Node(3,1)" to="." method="_on_node_31_pressed"]
[connection signal="pressed" from="Nodes/Node(3,2)" to="." method="_on_node_32_pressed"]
[connection signal="pressed" from="Nodes/Node(3,3)" to="." method="_on_node_33_pressed"]
[connection signal="pressed" from="Nodes/Node(4,1)" to="." method="_on_node_41_pressed"]
[connection signal="pressed" from="Nodes/Node(4,2)" to="." method="_on_node_42_pressed"]
[connection signal="pressed" from="Nodes/Node(5,1)" to="." method="_on_node_51_pressed"]
[connection signal="pressed" from="Nodes/Node(5,2)" to="." method="_on_node_52_pressed"]
[connection signal="pressed" from="Nodes/Node(5,3)" to="." method="_on_node_53_pressed"]
[connection signal="pressed" from="Nodes/Node(6,1)" to="." method="_on_node_61_pressed"]
[connection signal="pressed" from="Nodes/Node(6,2)" to="." method="_on_node_62_pressed"]
[connection signal="pressed" from="Nodes/Node(7,1)" to="." method="_on_node_71_pressed"]
